# secret-hitler-bench

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  server.py
docs/: boards_8p.md
secret_hitler/: arbiter.py  game_db.py  game_state.py  llm_client.py  log.py  model_config.py  models.py  names.py  player.py  player_view.py  policy_deck.py  prompts.py  schemas.py  stream.py
static/: index.html
tests/: test_web.py
